restyled contact-success.html as it suddenly stopped displaying correctly. No visible clues as to why so implemented some additional css to re-lay the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -723,6 +723,19 @@ footer {
 
 }
 
+
+/* ----------------------------- Contact Success */
+
+.contact-success-container {
+    margin: 0;
+    padding: 0;
+    margin-top: 200px;
+}
+
+.contact-success-text {
+    padding: 0 50px;
+}
+
 /* ----------------------------- Media-Queries */
 
 
